# lida-multiagents-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROMPTS_SUMMARY.md  README-experiments.txt  README.md  README.txt  SIMULATION_GUIDE.md  analyze_logs.py  benchmark_results.json  config.yaml  deliberation_results.csv  deliberation_results_test2.csv  demiurge.agent.baseline.md  demiurge.agent.md  demiurge.agent.md.2  docker-compose.redis.yml  docker-compose.services.yml  docker-compose.workers.yml  docker-compose.yml  docker-entrypoint.sh  fetch_logs.py  generate_real_debate_visuals.py  personality_conversation.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_advanced_quorum.py  run_ai_safety_debate.py  run_comprehensive_debates.py  run_context_deliberation.py  run_deliberation.py  run_hierarchical_dashboard.py  run_hyperdash.py  run_interactive_debate.py  run_live_demo.py  run_live_quorum.py  run_live_streaming_demo.py  (+18 more)
checkpoints/: 0684d09d_checkpoint.json  0b064044_checkpoint.json  0ff67cd6_checkpoint.json  1ae9f1ab_checkpoint.json  4a099e99_checkpoint.json  4b3b278b_checkpoint.json  763a5b6f_checkpoint.json  7a601171_checkpoint.json  7ed1d161_checkpoint.json  8622125e_checkpoint.json  9f21db96_checkpoint.json  b1951012_checkpoint.json  b3e4bb4a_checkpoint.json  c0287efb_checkpoint.json  d1887f3b_checkpoint.json  d9ad1e11_checkpoint.json  ddbdbc21_checkpoint.json  f6867f73_checkpoint.json
config/: model_assignments.yaml
docs/: ARCHITECTURE.md  CLI.md  OPERATIONS.md  QUICKSTART.md
examples/: apex_demo.py  dspy_advanced_negotiator.py  (+2 more)
(+954 files in other folders)
